<resources>
    <string name="app_name">Fight With Math</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_splash_screen" translatable="false">SplashScreen</string>
    <string name="bCredit">credits</string>
    <string name="bPlay">PLAY NOW</string>
    <string name="bShop">Shop</string>
    <string name="bHelp"><![CDATA[Goal & Help]]></string>
    <string name="title_activity_credit" translatable="false">Credit</string>
    <string name="credit">by: Itay Finci</string>
    <string name="title_activity_game" translatable="false">GameActivity</string>
    <string name="title_activity_shop" translatable="false">ShopActivity</string>
    <string name="title_activity_purpose" translatable="false">PurposeActivity</string>
    <string name="timeout">time is out</string>
    <string name="bSolve">solved!</string>
    <string name="tTimer">time:</string>
    <string name="RIghtAwnser">congratz you are right you won</string>
    <string name="RightAwnser2">points to your score</string>
    <string name="falseawnser">you didnt answer right the question</string>
    <string name="sContinuing">switch for auto continue</string>
    <string name="score">score:</string>
    <string name="noVrsion">Version</string>
    <string name="tGoal">Game\'s Goal</string>
    <string name="tFullGoal">The goal of the game is to solve the equation at the fastest time, in order to improve the player\'s skill in a fun way.</string>
    <string name="tInstructions">Instructions:</string>
    <string name="tFullInstructions">To start playing, press the "Play" button. Solve the equation as quick as possible by entering the answer next to the "X=", and press the "Solved!" Button. \n
    After solving the equation, the game will present a new equation after 5 seconds.\n
    In the game you are allowed to do what is needed in order to solve the equation. \n
    The game is for a single player. \n
    Audiance is 7th grade studants and above.</string>
    <string name="tHello">hello,???</string>
    <string name="sHello">hello,</string>
    <string name="signin_other_error" translatable="false">/</string>
</resources>
